<package>
  <name>advanced_demo</name>
  <version>0.2.0</version>
  <description>Metapackage that contains advanced tutorials</description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/common_tutorials</url>
  <url type="repository">https://github.com/ros/common_tutorials</url>
  <url type="bugtracker">https://github.com/ros/common_tutorials/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>dynamic_tutorial</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
