<?xml version="1.0"?>
<package format="2">
    <name>concurrency_demo</name>
    <version>0.0.0</version>
    <description>The concurrency_demo package</description>

    <maintainer email="wyl410922@qq.com">Yanliang Wang</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>

</package>